feat: integrar pagamentos com stripe
